Fixed some errors and added improvements to footbar (refresh button, alignment...)

--- a/css/style.css
+++ b/css/style.css
@@ -85,11 +85,37 @@ div.foot {
   position: relative;
   width: 100%;
   height: 40px;
+  max-height: 40px;
   background-color: var(--color-dark);
   font-size: small;
   color: var(--color-plain);
   text-align: center;
-  line-height: 38px;
+  
+}
+
+.foot-left, .foot-right {
+	margin: 0;
+	clear:none; 
+}
+
+.foot-left {
+	width: calc(60% - 20px);
+	float: left;
+	padding-left: 20px;
+	text-align: left;
+	line-height: 38px;
+}
+
+.foot-right {
+	width: calc(40% - 20px);
+	float: right;
+	padding-right: 20px;
+	text-align: right;
+	line-height: 42px;
+}
+
+div.foot i.fa {
+  font-size: large;
 }
 
 div.foot a {
